--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="/_expo/static/js/web/entry-7a226fafebdaf4ad39b192e32a10eb3b.js" defer></script>
+  <script src="./_expo/static/js/web/entry-7a226fafebdaf4ad39b192e32a10eb3b.js" defer></script>
 </body>
 </html>
